--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -28,10 +28,10 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <com.sinyuk.yuk.widgets.FourThreeImageView
+                <com.sinyuk.yuk.widgets.FourThreeGifImageView
                     android:id="@+id/shot"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:scaleType="centerCrop"
                     app:layout_collapseMode="parallax"
                     tools:src="@drawable/sample_04"/>
